<resources>
    <string name="app_name">ShermAssignment</string>
    <string name="sherm">Sherm</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="login">LOGIN</string>
    <string name="sign_out">Sign out</string>
    <string name="logged_In">Logged In Successfully</string>
    <string name="request_valid_email_or_password">Please Enter valid Email and Password</string>
    <string name="request_email_or_password">Please Enter Email and Password</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="empty_credentials">empty Credentials</string>
    <string name="image">Image</string>
    <string name="delete">Delete</string>
    <string name="empty_data_or_response">Data is Empty or Response</string>
    <string name="add">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category </string>
    <string name="inspection_type">Inspection Type </string>
    <string name="site">Site </string>
    <string name="inspection_location">Inspection Location </string>
    <string name="responsible_person">Responsible Person </string>
    <string name="due_date">Due Date </string>
    <string name="reporting_to">Reporting To </string>
    <string name="save">Save</string>
    <string name="edit">edit</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="corrective_evaluation">Corrective Evaluation</string>
    <string name="inspection_comments">Inspection Comments </string>
    <string name="type_here">Type Here....</string>
    <string name="corrective_action_details">Corrective Action Details</string>
    <string name="hierarchy_of_control">Hierarchy of Control</string>
    <string name="corrective_actions">Corrective Actions </string>
    <string name="reschedule">Reschedule</string>
    <string name="follow_up">Follow Up</string>
    <string name="review_date">Review Date</string>
    <string name="preferred_date">Preferred Date</string>
    <string name="comments">Comments </string>
    <string name="reject">REJECT</string>
    <string name="approve">APPROVE</string>
    <string name="schedule_inspection">Schedule Inspection</string>
    <string name="last_service_inspection_date">Last Service Inspection Date</string>
    <string name="add_corrective_action">Add Corrective Action</string>
    <string name="completeddate">Completed Date</string>
    <string name="cantdeleted">Can\'t deleted</string>
    <string name="selectedDate">Select a Date</string>
    <string name="star">*</string>
    <string name="status">Status</string>
    <string name="inspection_detail">INSPECTION DETAIL</string>
    <string name="due_date_extended_request">Due Date Request Created</string>
    <string name="failed_to_save">Failed to save inspection data</string>
    <string name="failed">Failed!!</string>
    <string name="successfully_comment">Successfully Comment Added</string>
    <string name="nothing_to_see_here">Nothing To See Here</string>
    <string name="inspections">Inspections</string>
    <string name="add_inspections_completed">Add Inspection Completed</string>
    <string name="inspections_Comments">Inspections Comments</string>
    <string name="schedule_inspections">Schedule Inspection</string>
    <string name="dashboard">Dashboard</string>
    <string name="corrective_action">Corrective Action</string>
    <string name="due_date_extended_apporval">Due Date Extend Review</string>
    <string name="add_inspection">Schedule Inspection</string>
    <string name="assign_ca">Assign CA</string>
    <string name="added">Successfully Added</string>
    <string name="added_insp">Inspection Added</string>
    <string name="confirm">Confirm?</string>
    <string name="document_are_uploaded">Document are uploaded?</string>
    <string name="complted">Inspection completion added successfully</string>
    <string name="sucess">Success</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="logout">Would you like to Logout</string>
    <string name="deleteThis">Are you sure you want to delete this Inspection?</string>
    <string name="n0_corrective_action_found">No Corrective Action Found</string>
    <string name="saved_sucessfully">Saved Successfully</string>
    <string name="reject_sucessfully">Rejected Successfully</string>
    <string name="approve_sucessfully">Approved Successfully</string>
    <string name="comment_required">Comments required</string>
    <string name="error">Error</string>
    <string name="caview">CA View</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_here">Select Here…</string>
    <string name="approverejectCA">Approve/Reject CA</string>
</resources>