<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".CorrecitveEvalution">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments"
            android:textColor="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:textColor="@color/red"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etCorrectiveEvaluationComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:inputType="textImeMultiLine"
        android:textColor="@color/black"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textColor="@color/black"
        android:padding="8dp"/>

    <Spinner
        android:id="@+id/spStatusCorrectiveEvaluation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"/>

</LinearLayout>