<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/offWhite"
    android:padding="12dp"
    tools:context=".ui.dueDate.DueDateExtendRequest">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferred_date"
        android:textColor="@color/darkGreen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvPreferredDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/darkGreen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPreferredDate"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/calender" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingVertical="2dp">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:textColor="@color/darkGreen" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/red" />
    </LinearLayout>

    <EditText
        android:id="@+id/etComments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@color/offWhite"
        android:hint="@string/type_here"
        android:inputType="text"
        android:textColor="@color/darkGreen" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>