<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:padding="12dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.inspectionDetailsUI.AddInspectionFragment"
    >

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/category"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:textColor="@color/black"
        android:visibility="visible" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textview.MaterialTextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/inspection_type"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/spInspectionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:textColor="@color/black"
        android:visibility="visible" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/site"
        android:textColor="@color/black" />


    <EditText
        android:id="@+id/etSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/site"
        android:background="@color/white"
        android:inputType="text"
        android:paddingVertical="2dp"
        android:textColor="@color/black"
        android:visibility="visible"
         />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/inspection_location"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/spInspectionLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:textColor="@color/black"
        android:visibility="visible" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/responsible_person"
        android:textColor="@color/black" />



    <Spinner
        android:id="@+id/spResponsiblePerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:textColor="@color/black"
        android:visibility="visible" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/due_date"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:paddingVertical="2dp"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btCalender"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/calendar_add"
            android:paddingVertical="2dp"
            android:textColor="@color/black"
            android:visibility="visible" />
    </LinearLayout>

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="2dp"
        android:text="@string/reporting_to"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/spReportingTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:visibility="visible" />

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
</LinearLayout>