<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="@color/offWhite"
    tools:context=".ui.add_corrective_action.AddCorrectiveAction">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/add_corrective_action"
        android:textColor="@color/navyGreen"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingVertical="2dp">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:text="@string/responsible_person"
        android:textColor="@color/darkGreen" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/red" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spResponsiblePersonAddCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:spinnerMode="dialog" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingVertical="2dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="8dp"
            android:text="@string/hierarchy_of_control"
            android:textColor="@color/darkGreen" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/red" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spHierarchyOfControlAddCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:spinnerMode="dialog" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/due_date"
        android:paddingHorizontal="8dp"
        android:textColor="@color/darkGreen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="4dp"
        android:gravity="center"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDueDateAddCA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/darkGreen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDuedateAddCA"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/calender" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingVertical="2dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingHorizontal="8dp"
            android:text="@string/corrective_actions"
            android:textColor="@color/darkGreen" />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/star"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/red" />
    </LinearLayout>

    <EditText
        android:id="@+id/etmAddCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:layout_marginVertical="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:inputType="textMultiLine"
        android:autofillHints="" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:textColor="@color/darkGreen" />

    <Spinner
        android:id="@+id/spStatusAddCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:spinnerMode="dialog" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follow_up"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:textColor="@color/darkGreen" />

    <Spinner
        android:id="@+id/spFollowUpAddCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:spinnerMode="dialog" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_date"
        android:layout_marginVertical="4dp"
        android:layout_marginTop="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/darkGreen" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvReviewDateAddCA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:textColor="@color/darkGreen" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>